@@ -1,8 +1,8 @@
 {
   "timestamp" : "2024-01-25T08:19:59Z",
-  "count" : 133,
-  "count_minmax" : [ 112, 300 ],
-  "count_decinc" : [ -167, +300 ],
+  "count" : 112,
+  "count_minmax" : [ 112, 112 ],
+  "count_decinc" : [ -0, +112 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
