@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-01-25T01:11:22Z",
+  "timestamp" : "2024-01-25T08:19:59Z",
   "count_outdated" : 181628,
   "uniques_outdated" : 1885,
-  "count" : 185823,
-  "uniques" : 1916,
+  "count" : 185935,
+  "uniques" : 1918,
   "clones" : [
     {
       "timestamp": "2024-01-11T00:00:00Z",
-      "count": 225,
+      "count": 133,
       "count_minmax": [ 112, 300 ],
-      "count_decinc": [ 75, 300 ],
+      "count_decinc": [ 167, 300 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-01-25T00:00:00Z",
+      "count": 112,
+      "count_minmax": [ 112, 112 ],
+      "count_decinc": [ 0, 112 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
