@@ -1,3 +1,12 @@
+2024-01-25T08:19:59Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7651701696 # 55
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
+* notice: last 14d: unq all: 8 4140
+* notice: prev accum: outdated-unq outdated-all / unq all: 1885 181628 / 1916 185823
+* notice: next accum: outdated-unq outdated-all / unq all: 1885 181628 / 1918 185935
+* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -92 / +2 +112 -0 -0 / 2 112
+* notice: removed / changed dates: [] / [2024-01-11 2024-01-25]
+
 2024-01-25T01:11:22Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7648436309 # 54
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
